[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[options]
package_dir = "vtclear"
packages = ["vtclear"]

[project]
name = "vtclear"
version = "1.0"
authors = [
    {name = "Carlos A. Planchón", email = "carlosandresplanchonprestes@gmail.com"}
]
description = "Python3 ANSI VT100 implementation of Erase Screen."
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
license = {text = "MIT License"}
keywords = ["CLEAR", "VT100", "ANSI"]
readme = "README.md"
dependencies=[
    "ijson",
]

[project.urls]
repository = "https://github.com/carlosplanchon/vtclear.git"
