[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vtclear"
version = "1.0.1"
requires-python = ">=3.8"
authors = [
  { name = "Carlos A. Planchón", email = "carlosandresplanchonprestes@gmail.com" }
]
description = "Python3 ANSI VT100 implementation of Erase Screen."
readme = "README.md"
keywords = ["CLEAR", "VT100", "ANSI"]

license = "MIT"
license-files = ["LICENSE"]

classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]

[project.urls]
Repository = "https://github.com/carlosplanchon/vtclear.git"

[tool.setuptools]
packages = ["vtclear"]
